# rappit

./: .gitignore  README.md  flathub.json  io.github.fkkarakurt.rappit.yml  meson.build  meson_options.txt  post_install.py  pypi-deps.yaml  python3-requests.json  requirements.txt  run.py
src/app/: examples_manager.py  formatter.py  headers_panel.py  history_manager.py  main.py  preferences_window.py  request_handler.py  search_panel.py  settings_manager.py  syntax_highlighter.py  window.py
src/data/: io.github.fkkarakurt.rappit.desktop  io.github.fkkarakurt.rappit.gschema.xml  io.github.fkkarakurt.rappit.metainfo.xml
src/data/gtk/: help-overlay.ui
